Revert "[fix] simple layout issues"
This reverts commit 3554a84030090ba836e8c270b6b401c11a2e24f6.

--- a/src/client/modules/petition/petition.css
+++ b/src/client/modules/petition/petition.css
@@ -1,3 +1,3 @@
 .petition-padding {
-	padding-top:100px;
+	padding-top:30px;
 }
